# Rivet

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  rivet.toml
.github/workflows/: ci.yml  docs.yml  install-windows.yml  llvm-bench.yml  publish-toolchain.yml  release.yml  smoke.yml
bootstrap/: install.ps1  install.sh
ci/: bundle.ps1  bundle.sh
docs/: 404.html  CNAME.example  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  SUMMARY.md  book.toml  building.md  cli.md  contributing.md  getting-started.md  index.html  index.md  install.sh  manifest.md  script.js  styles.css  toolchain-bundles.md
docs/site/: index.html  main.js  style.css
docs/theme/: custom.css
examples/complex-demo/: README.md  rivet.toml
examples/complex-demo/app/: rivet.toml
examples/complex-demo/app/src/: main.cpp
examples/complex-demo/mathlib/: rivet.toml
examples/complex-demo/mathlib/include/mathlib/: math.hpp
examples/complex-demo/mathlib/src/: lib.cpp
examples/complex-demo/stringutils/: rivet.toml
examples/complex-demo/stringutils/include/stringutils/: strings.hpp
examples/complex-demo/stringutils/src/: lib.cpp
platform/common/: http_impl.hpp
platform/interface/: env.hpp  fs.hpp  net.hpp  process.hpp  result.hpp  sandbox.hpp  terminal.hpp  time.hpp  types.hpp
platform/linux/: env.cpp  fs.cpp  net.cpp  process.cpp  sandbox.cpp  terminal.cpp
platform/macos/: env.cpp  fs.cpp  net.cpp  process.cpp  sandbox.cpp  terminal.cpp
platform/windows/: env.cpp  fs.cpp  net.cpp  process.cpp  sandbox.cpp  terminal.cpp
rivet/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
rivet/cli/: Cargo.toml  build.rs
rivet/cli/src/: config.rs  error.rs  ffi.rs  main.rs
rivet/cli/src/build_system/: cache.rs  compiler.rs  mod.rs
rivet/cli/src/build_system/graph/: graph_impl.rs  mod.rs  node.rs
rivet/cli/src/commands/: build.rs  check.rs  clean.rs  deps.rs  format.rs  init.rs  isolate.rs  lint.rs  mod.rs  new.rs  publish.rs  run.rs  search.rs  target.rs  test.rs  toolchain.rs
rivet/cli/src/dependency/: mod.rs  vcpkg.rs
rivet/cli/src/format/: mod.rs
rivet/cli/src/isolation/: manager.rs
rivet/cli/src/lint/: mod.rs
rivet/cli/src/package/: mod.rs
rivet/cli/src/registry/: client.rs  types.rs
rivet/cli/src/targets/: manager.rs  types.rs
rivet/cli/src/test/: mod.rs
rivet/cli/src/toolchain/: manager.rs  types.rs
rivet/cli/src/workspace/: mod.rs
rivet/cli/tests/: extended_tests.rs  integration_test.rs
rivet/engine/: CMakeLists.txt
rivet/engine/include/rivet/: engine.hpp
rivet/engine/src/: engine.cpp
rivet/my_project_test/: rivet.toml
rivet/my_project_test/src/: main.cpp
rivet/temp_test/: rivet.toml
runtime/: main.cpp  version.hpp  version.hpp.in
runtime/archive/: tar_zst.cpp  tar_zst.hpp
runtime/cache/: binary_cache.cpp  binary_cache.hpp  key.cpp  key.hpp  store.cpp  store.hpp
runtime/cli/: cli.cpp  cli.hpp
runtime/common/: json.cpp  json.hpp
runtime/daemon/: daemon.cpp  daemon.hpp
runtime/modules/: scanner.cpp  scanner.hpp
runtime/package/: default_sources.cpp  default_sources.hpp  lockfile.cpp  lockfile.hpp  manifest.cpp  manifest.hpp  resolver.cpp  resolver.hpp  source.cpp  source.hpp
runtime/package/sources/: git.cpp  git.hpp  local.cpp  local.hpp  vcpkg.cpp  vcpkg.hpp
runtime/toolchain/: compile.cpp  compile.hpp  discovery.cpp  discovery.hpp  sdk.cpp  sdk.hpp  triple.hpp
site/: README.md  _config.yml  docs.md  script.js
tests/: CMakeLists.txt
tests/platform/: CMakeLists.txt  test_fs.cpp  test_sandbox.cpp
tests/smoke/: hello_fmt.py
tests/unit/: CMakeLists.txt  test_binary_cache.cpp  test_cache_key.cpp  test_compile.cpp  test_dep_file.cpp  test_env.cpp  test_graph.cpp  test_json.cpp  test_manifest.cpp  test_pkgconfig.cpp  test_resolver.cpp  test_result.cpp  test_semver.cpp  test_source.cpp
