[package]
name = "rivet-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
cxx = "1.0"
dirs = "6.0.0"
serde_json = "1.0.145"
which = "8.0.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
indicatif = "0.18.3"
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
